feat: cities: put, delete
